[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[workspace.dependencies]
cipher = "0.4"
crossbeam-queue = "0.3"
flume = "0.11"
futures-core = "0.3"
futures-io = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
loom = "0.7"
pin-project = "1"
proptest = "1"
proptest-state-machine = "0.3"
rand = "0.9"
scopeguard = "1"
test-log = "0.2"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
zerocopy = "0.8"

[workspace.dependencies.once_cell]
version = "1"
features = [
  "parking_lot",
]

[workspace.dependencies.rustls]
version = "0.23"
default-features = false
features = [
  "ring",
  "std",
]
