[workspace]
resolver = "3"
members = [
  "crates/*",
]

[workspace.package]
edition = "2024"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"
publish = false

[workspace.dependencies]
aes = "0.8"
arrayvec = "0.7"
base64ct = "1"
cipher = "0.4"
crossbeam-queue = "0.3"
ctr = "0.9"
digest = "0.10"
flume = "0.11"
futures-channel = "0.3"
futures-core = "0.3"
futures-io = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
loom = "0.7"
pin-project = "1"
proptest = "1"
proptest-state-machine = "0.3"
rand = "0.8"
ring = "0.17"
rsa = "0.9"
rustls-webpki = "0.103"
scopeguard = "1"
sha1 = "0.10"
sha2 = "0.10"
subtle = "2"
test-log = "0.2"
thiserror = "2"
tokio = "1"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
x509-cert = "0.2"
zerocopy = "0.8"

[workspace.dependencies.anyhow]
version = "1"
features = [
  "backtrace",
]

[workspace.dependencies.once_cell]
version = "1"
features = [
  "parking_lot",
]

[workspace.dependencies.rustls]
version = "0.23"
default-features = false
features = [
  "ring",
  "std",
]
