[package]
name = "onioncloud-lowlevel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cipher.workspace = true
crossbeam-queue.workspace = true
futures-core.workspace = true
futures-io.workspace = true
futures-sink.workspace = true
futures-util.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
rustls.workspace = true
scopeguard.workspace = true
thiserror.workspace = true

[dependencies.flume]
workspace = true
features = [
  "async",
]

[dependencies.tokio]
workspace = true
optional = true
features = [
  "io-util",
  "net",
  "rt",
  "time",
]

[dependencies.tokio-util]
workspace = true
optional = true
features = [
  "compat",
]

[dependencies.tracing]
workspace = true
features = [
  "attributes",
]

[dependencies.zerocopy]
workspace = true
features = [
  "std",
]

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
default = [
  "tokio",
]
tokio = [
  "dep:tokio",
  "dep:tokio-util",
]
