[package]
name = "onioncloud-lowlevel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes.workspace = true
base64ct.workspace = true
cipher.workspace = true
crossbeam-queue.workspace = true
ctr.workspace = true
futures-channel.workspace = true
futures-core.workspace = true
futures-io.workspace = true
futures-sink.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
ring.workspace = true
rsa.workspace = true
rustls.workspace = true
rustls-webpki.workspace = true
scopeguard.workspace = true
subtle.workspace = true
thiserror.workspace = true

[dependencies.flume]
workspace = true
features = [
  "async",
]

[dependencies.futures-util]
workspace = true
features = [
  "sink",
]

[dependencies.tokio]
workspace = true
optional = true
features = [
  "io-util",
  "net",
  "rt",
  "time",
]

[dependencies.tokio-util]
workspace = true
optional = true
features = [
  "compat",
]

[dependencies.tracing]
workspace = true
features = [
  "attributes",
]

[dependencies.zerocopy]
workspace = true
features = [
  "derive",
  "std",
]

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true

[dev-dependencies.test-log]
workspace = true
features = [
  "trace",
]

[dev-dependencies.tokio]
workspace = true
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "time",
]

[dependencies.tracing-subscriber]
workspace = true
features = [
  "env-filter",
]

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
default = [
  "tokio",
]
tokio = [
  "dep:tokio",
  "dep:tokio-util",
]
