[package]
name = "onioncloud-lowlevel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes.workspace = true
base64ct.workspace = true
cipher.workspace = true
crossbeam-queue.workspace = true
ctr.workspace = true
digest.workspace = true
ed25519-dalek.workspace = true
futures-channel.workspace = true
futures-core.workspace = true
futures-io.workspace = true
futures-sink.workspace = true
hkdf.workspace = true
hmac.workspace = true
memchr.workspace = true
once_cell.workspace = true
pin-project.workspace = true
rand.workspace = true
rsa.workspace = true
rustls-webpki.workspace = true
rustls.workspace = true
scopeguard.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
x25519-dalek.workspace = true

[dependencies.flume]
workspace = true
features = [
  "async",
]

[dependencies.futures-util]
workspace = true
features = [
  "io",
]

[dependencies.tokio]
workspace = true
optional = true
features = [
  "io-util",
  "net",
  "rt",
  "time",
]

[dependencies.tokio-util]
workspace = true
optional = true

[dependencies.zerocopy]
workspace = true
features = [
  "derive",
  "std",
]

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true

[dev-dependencies.test-log]
workspace = true
features = [
  "trace",
]

[dev-dependencies.tokio]
workspace = true
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "time",
]

[dependencies.tracing-subscriber]
workspace = true
features = [
  "env-filter",
]

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
default = [
  "tokio",
]
tokio = [
  "dep:tokio",
  "dep:tokio-util",
]
