[package]
name = "onioncloud-lowlevel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cipher.workspace = true
crossbeam-queue.workspace = true
futures-core.workspace = true
futures-io.workspace = true
rand.workspace = true
thiserror.workspace = true

[dependencies.zerocopy]
workspace = true
features = [
  "std",
]

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true
