[package]
name = "onioncloud-lowlevel"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
cipher.workspace = true
crossbeam-queue.workspace = true
futures-core.workspace = true
futures-io.workspace = true
once_cell.workspace = true
rand.workspace = true
rustls.workspace = true
thiserror.workspace = true

[dependencies.flume]
workspace = true
features = [
  "async",
]

[dependencies.tokio]
workspace = true
optional = true
features = [
  "net",
  "rt",
  "time",
]

[dependencies.tokio-util]
workspace = true
optional = true
features = [
  "compat",
]

[dependencies.tracing]
workspace = true
features = [
  "attributes",
]

[dependencies.zerocopy]
workspace = true
features = [
  "std",
]

[dev-dependencies]
proptest.workspace = true
proptest-state-machine.workspace = true

[target.'cfg(loom)'.dependencies]
loom.workspace = true

[features]
default = [
  "tokio",
]
tokio = [
  "dep:tokio",
  "dep:tokio-util",
]
