[package]
name = "onioncloud-spsc-zerobuf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bench]]
name = "send_recv"
harness = false

[dependencies]
futures-core.workspace = true
futures-sink.workspace = true
scopeguard.workspace = true

[dependencies.tracing]
workspace = true
optional = true

[dev-dependencies]
tracing.workspace = true

[dev-dependencies.criterion]
workspace = true
features = [
  "async_tokio",
]

[dev-dependencies.crossfire]
workspace = true
features = [
  "tokio",
]

[dev-dependencies.flume]
workspace = true
features = [
  "async",
]

[dev-dependencies.futures-util]
workspace = true
features = [
  "io",
]

[dev-dependencies.test-log]
workspace = true
features = [
  "trace",
]

[dev-dependencies.tokio]
workspace = true
features = [
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "test-util",
  "time",
]

[target.'cfg(loom)'.dependencies.loom]
workspace = true
features = [
  "checkpoint",
  "futures",
]

[features]
tracing = [
  "dep:tracing",
]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(loom)"]
